--- a/index.html
+++ b/index.html
@@ -85,7 +85,22 @@
       {name: 'Indonesia (Jakarta)', tz: 'Asia/Jakarta', flag: '🇮🇩'},
       {name: 'Saudi Arabia', tz: 'Asia/Riyadh', flag: '🇸🇦'},
       {name: 'Singapore', tz: 'Asia/Singapore', flag: '🇸🇬'},
-      {name: 'Egypt', tz: 'Africa/Cairo', flag: '🇪🇬'}
+      {name: 'Egypt', tz: 'Africa/Cairo', flag: '🇪🇬'},
+      {name: 'Sweden', tz: 'Europe/Stockholm', flag: '🇸🇪'},
+      {name: 'Switzerland', tz: 'Europe/Zurich', flag: '🇨🇭'},
+      {name: 'Poland', tz: 'Europe/Warsaw', flag: '🇵🇱'},
+      {name: 'Malaysia', tz: 'Asia/Kuala_Lumpur', flag: '🇲🇾'},
+      {name: 'Bangladesh', tz: 'Asia/Dhaka', flag: '🇧🇩'},
+      {name: 'Israel', tz: 'Asia/Jerusalem', flag: '🇮🇱'},
+      {name: 'Qatar', tz: 'Asia/Qatar', flag: '🇶🇦'},
+      {name: 'Greece', tz: 'Europe/Athens', flag: '🇬🇷'},
+      {name: 'Portugal', tz: 'Europe/Lisbon', flag: '🇵🇹'},
+      {name: 'Ireland', tz: 'Europe/Dublin', flag: '🇮🇪'},
+      {name: 'Austria', tz: 'Europe/Vienna', flag: '🇦🇹'},
+      {name: 'Finland', tz: 'Europe/Helsinki', flag: '🇫🇮'},
+      {name: 'Denmark', tz: 'Europe/Copenhagen', flag: '🇩🇰'},
+      {name: 'Nepal', tz: 'Asia/Kathmandu', flag: '🇳🇵'},
+      {name: 'Sri Lanka', tz: 'Asia/Colombo', flag: '🇱🇰'}
     ];
 
     const grid = document.getElementById('grid');
