Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     .sun{filter: drop-shadow(0 6px 12px rgba(255,165,0,0.15));}
     .moon{opacity:0.9;}
   </style>
+    <!-- Favicon -->
+  <link rel="icon" type="image/png" href="globe.png">
 </head>
 <body class="bg-slate-50 p-6">
   <div id="app" class="max-w-7xl mx-auto">
